plugins/xcb: only handle modifier presses in XRecord

219499707e1f85d318bb23ce305de4f3cb0e0eb3 moved handling of all events to
XRecord, which caused global shortcuts to trigger even when input is
grabbed. Partially revert the change to handle normal key presses in
nativeEventFilter. To preserve correct handling of modifier-only
shortcuts, handle modifier presses in XRecord, and clears the
modifier-only state for other presses.

BUG: 489113